objects/BusinessBuilderProgramYear__c.object
<CustomObject>
    <description>Determines the Year, Start Date and End Date for Business Builder year planning.</description>
    <fields>
        <fullName>BBPYExternal_ID__c</fullName>
        <description>Business Builder Program Year Object External ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Business Builder Program Year Object External ID</inlineHelpText>
        <label>BBPY_External ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date for the Program Year</description>
        <label>Program Year End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnrollmentEndDate__c</fullName>
        <description>Enrollment End Date for the Business Builder Program Year</description>
        <label>Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnrollmentStartDate__c</fullName>
        <description>Enrollment Start Date for the Business Builder Program Year</description>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JDESUBLEDGER__c</fullName>
        <description>JDE Subledger</description>
        <label>JDE SUBLEDGER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_ACCOUNT__c</fullName>
        <description>JDE Account</description>
        <label>JDE ACCOUNT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_DEPT__c</fullName>
        <description>JDE Dept.</description>
        <label>JDE DEPT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_DIV__c</fullName>
        <description>JDE Div</description>
        <label>JDE DIV</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_ItemDesc__c</fullName>
        <description>JDE Item Desc</description>
        <label>JDE Item Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_LOC__c</fullName>
        <description>JDE Loc</description>
        <label>JDE LOC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_PROD__c</fullName>
        <description>JDE Prod</description>
        <label>JDE PROD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date for the Program Year</description>
        <label>Program Year Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermsandConditionsforProgramYear__c</fullName>
        <description>Terms and Conditions for this program year.</description>
        <inlineHelpText>Terms and Conditions for this program year.</inlineHelpText>
        <label>Terms and Conditions for Program Year</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Business Builder Program Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>EnrollmentStartDate__c</columns>
        <columns>EnrollmentEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Builder Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Builder Program Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>